@@ -1,5 +1,6 @@
 * 0.11.1 (unreleased)
    * Point defense won't shoot at disabled pilots anymore
+   * `kidnapped/traffic_00`: fixed formating string telling the player what system to go to
    * Fixed many typos
    * Translation updates
 
